# manify

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  Manify Tutorial.ipynb  README.md  llms.txt  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tutorial.ipynb
.github/: codecov.yml
.github/workflows/: ci.yml  test.yml
benchmark/: 128_dims.yaml  16_dims.yaml  README.md  benchmark.py  benchmark_config.yaml  benchmark_lp.py  big_benchmark_manual.py  config.yaml  drytest.yaml  run_benchmarks.py  run_benchmarks.py.bak  table2.yaml  table3.yaml  table4.yaml
data/graphs/embeddings/: citeseer_dists.tsv  cora_dists.tsv  cs_phds_dists.tsv  polblogs_dists.tsv
data/graphs/embeddings/citeseer/: E_0.h5  E_1.h5  E_2.h5  E_3.h5  E_4.h5  E_5.h5  E_6.h5  E_7.h5  E_8.h5  E_9.h5  HE_0.h5  HE_1.h5  HE_2.h5  HE_3.h5  HE_4.h5  HE_5.h5  HE_6.h5  HE_7.h5  HE_8.h5  (+61 more)
data/results/: all_nn_empirical.tsv  all_nn_graph.tsv  all_nn_link.tsv  all_nn_vae.tsv  classification_nn_multiple_curvatures.tsv  classification_nn_single_curvature.tsv  classification_nn_vae.tsv  classification_signature_mdNone_ICML.tsv  classification_single_curvature_ICML.tsv  classification_single_curvature_icml.csv  latex_table.tex  nn_empirical_datasets.tsv  regression_nn_multiple_curvatures.tsv  regression_nn_single_curvature.tsv  vae_ICML.tsv
data/results_icml/: all_nn_empirical.tsv  all_nn_neurons.tsv  all_results.tsv  classification_signature.tsv  classification_single_curvature.tsv  fourier2.tsv  graph_classification.tsv  graph_regression.tsv  link_prediction.tsv  regression_signature.tsv  regression_single_curvature.tsv  table2.tex  table3.tex  table4.tex  temperature.tsv  traffic_results.tsv  vae.tsv
data/results_icml_revision/: all_nn_empirical.tsv  all_nn_graph.tsv  all_nn_link.tsv  all_nn_vae.tsv  classification_nn_empirical.tsv  classification_nn_graph.tsv  classification_nn_multiple_curvatures.tsv  classification_nn_single_curvature.tsv  classification_nn_single_curvature_1024dim_usespecialdims.tsv  classification_nn_single_curvature_1024dim_usespecialdims_md3.tsv  classification_nn_single_curvature_1024dim_usespecialdims_md3_8clusters.tsv  classification_nn_single_curvature_1024dim_usespecialdims_md3_8clusters_FINAL.tsv  classification_nn_single_curvature_1024dim_usespecialdims_md3_8clusters_full.tsv  classification_nn_single_curvature_1024dim_usespecialdims_mdNone.tsv  classification_nn_single_curvature_128dim.tsv  classification_nn_single_curvature_128dim_usespecialdims.tsv  classification_nn_single_curvature_16dim.tsv  classification_nn_single_curvature_512dim_usespecialdims.tsv  classification_nn_vae.tsv  link_prediction.tsv  max_depth_vs_accuracy.csv  regression_nn_empirical.tsv  regression_nn_graph.tsv  regression_nn_multiple_curvatures.tsv  regression_nn_single_curvature.tsv
data/results_icml_sx2z/: hyperparameter_tuning_detailed.csv
data/results_wandb/: aggregated_results_manify-benchmark-run.tsv  graph_embedding_20250327-190543.tsv  graph_embedding_cumulative.tsv  single_curvature_20250328-085111.tsv  vae_embedding_cumulative.tsv
docs/: api.md  gen_ref_pages.py  index.md  installation.md
docs/source/: api.rst  conf.py  index.rst
embedders/: __init__.py  benchmarks.py  coordinate_learning.py  dataloaders.py  gaussian_mixture.py  manifolds.py  metrics.py  vae.py
embedders/curvature_estimation/: greedy_method.py
embedders/embedders/: coordinate_learning.py  siamese.py  vae.py
embedders/predictors/: __init__.py  gnn.py  kappa_gcn.py  tree_new.py
embedders/utils/: benchmarks.py  link_prediction.py
manify/: __init__.py  manifolds.py
manify/clustering/: __init__.py  fuzzy_kmeans.py
manify/curvature_estimation/: __init__.py  _pipelines.py  delta_hyperbolicity.py  greedy_method.py  sectional_curvature.py
manify/embedders/: __init__.py  _base.py  _losses.py  coordinate_learning.py  losses.py  siamese.py  vae.py
manify/optimizers/: __init__.py  _adan.py  radan.py
manify/predictors/: __init__.py  _base.py  _kernel.py  _midpoint.py  decision_tree.py  kappa_gcn.py  kernel.py  midpoint.py  perceptron.py  svm.py  tree_icml.py
manify/predictors/nn/: __init__.py  layers.py
manify/utils/: __init__.py  benchmarks.py  dataloaders.py  link_prediction.py  preprocessing.py  visualization.py
notebooks/: 10_torchified_hyperdt.ipynb  13_information_gain.ipynb  14_new_tree_testing.ipynb  16_tabbaghi_classifiers.ipynb  17_verify_new_mse.ipynb  18_ablations.ipynb  19_opengraphbenchmark.ipynb  21_other_graph_dataset.ipynb  23_benchmark_vae_embeddings.ipynb  24_benchmark_graph_embeddings.ipynb  25_benchmark_globe.ipynb  26_benchmark_single_curvature_gaussian.ipynb  27_benchmark_signature_gaussian.ipynb  2_polblogs_benchmark.ipynb  30_fourier.ipynb  30_pc_fourier.ipynb  32_big_table.ipynb  33_traffic.ipynb  34_continents.ipynb  37_sklearn_decision_tree.ipynb  39_reembed_gaussian.ipynb  40_component_interp.ipynb  41_more_benchmarks.ipynb  41_pc_more_benchmarks.ipynb  42_basic_visualization.ipynb  42_pc_basic_visualization.ipynb  43_benchmark_neural.ipynb  44_curvature.ipynb  45_blood_and_lymphoma_interp.ipynb  46_write_as_relu.ipynb  47_stereographic_tests.ipynb  48_fix_transductive_coords.ipynb  49_plotly_dashboard.ipynb  4_cs_phds_regression.ipynb  50_graph_embeddings_new.ipynb  51_gcn_link_prediction.ipynb  52_high_dim_embedding.ipynb  53_gaussian_mixture_refactor.ipynb  54_kappa_gcn_benchmark.ipynb  55_reimplement_gu.ipynb  (+29 more)
src/: __init__.py  manifolds.py  signature_estimation.py  vae.py
src/embedders/: benchmarks.py  coordinate_learning.py  dataloaders.py  gaussian_mixture.py  link_prediction.py  manifolds.py  metrics.py  signature_estimation.py  vae.py  visualization.py
src/embedders/predictors/: __init__.py  gnn.py  kernel.py  midpoint.py  mlp.py  perceptron.py  tree_new.py
src/predictors/: gnn.py  mlp.py
tests/: TODO.md  test_clustering.py  test_curvature_estimation.py  test_delta_hyperbolicity.py  test_embedders.py  test_manifolds.py  test_optimizer.py  test_predictors.py  test_sectional_curvature.py  test_utils.py
tests/legacy/: tree_icml.py
(+240 files in other folders)
