[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manify"
version = "0.0.2"
description = "Manifold-based machine learning"
authors = [
    { name = "Philippe Chlenski", email = "pac@cs.columbia.edu"},
    { name = "Kaizhu Du", email = "kd2814@columbia.edu"}
]
dependencies = [
    "torch",
    "geoopt",
    "numpy",
    "tqdm",
    "cvxpy",
    "scikit-learn==1.5.1",
    "scipy<=1.9.3" # Ensure scalar_search_wolfe2 import works correctly
]

[project.optional-dependencies]
dev = [
    "jaxtyping",
    "beartype",
    "pytest",
    "mypy",
    "pytest-cov",
    "black",
    "isort",
    "pylint"
]
utils = [
    "networkx",
    "pandas",
    "matplotlib",
    "anndata",
    "basemap"
]

[tool.setuptools]
packages = ["manify"]

# Pylint configuration
[tool.pylint.master]
init-hook = "import sys; sys.path.append('.')"
fail-under = 8.0
ignore = "__pycache__,.git,venv"

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.format]
max-line-length = 120

[tool.pylint."MESSAGES CONTROL"]
disable = ["invalid-name"]

[tool.pylint.basic]
good-names = "i,j,k,ex,Run,_,fp"
argument-rgx = "[a-z_][a-z0-9_]{2,30}$"
variable-rgx = "[a-z_][a-z0-9_]{2,30}$"
class-rgx = "[A-Z][a-zA-Z0-9]+$"
const-rgx = "(([A-Z_][A-Z0-9_]*)|(__.*__))"
module-rgx = "([a-z_][a-z0-9_]*)"

[tool.pylint.typecheck]
generated-members = "torch.*,nn.*"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--jaxtyping-packages=beartype.beartype"
python_files = "test_*.py"

[tool.mypy]
# Specify the packages to check
packages = ["manify"]

# Ignore missing imports for external libraries
ignore_missing_imports = true

# Use jaxtyping-specific plugins
plugins = ["jaxtyping.mypy_plugin"]