[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manify"
version = "0.0.2"
description = "Manifold-based machine learning"
authors = [
    { name = "Philippe Chlenski", email = "pac@cs.columbia.edu"},
    { name = "Kaizhu Du", email = "kd2814@columbia.edu"}
]
dependencies = [
    "torch",
    "geoopt",
    "numpy",
    "tqdm",
    "cvxpy",
    "scikit-learn==1.5.1",
    "scipy<=1.9.3", # Ensure scalar_search_wolfe2 import works correctly
    "datasets"
]

[project.optional-dependencies]
dev = [
    "jaxtyping",
    "beartype",
    "pytest",
    "mypy",
    "pytest-cov",
    "black",
    "isort",
    "pylint"
]
docs = [
  "sphinx>=5",
  "sphinx-rtd-theme",
  "sphinx-autodoc-typehints",
]

[tool.setuptools]
packages = ["manify"]

[tool.setuptools.package-data]
"manify" = ["../data/**/*"]

# Pylint configuration
[tool.pylint.master]
init-hook = "import sys; sys.path.append('.')"
fail-under = 8.0
ignore = "__pycache__,.git,venv"

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.format]
max-line-length = 120

[tool.pylint."MESSAGES CONTROL"]
disable = ["invalid-name"]

[tool.pylint.basic]
good-names = "i,j,k,ex,Run,_,fp"
argument-rgx = "[a-z_][a-z0-9_]{2,30}$"
variable-rgx = "[a-z_][a-z0-9_]{2,30}$"
class-rgx = "[A-Z][a-zA-Z0-9]+$"
const-rgx = "(([A-Z_][A-Z0-9_]*)|(__.*__))"
module-rgx = "([a-z_][a-z0-9_]*)"

[tool.pylint.typecheck]
generated-members = "torch.*,nn.*"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--jaxtyping-packages=beartype.beartype"
python_files = "test_*.py"

[tool.mypy]
# Specify the packages to check
packages = ["manify"]

# Ignore missing imports for external libraries
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = false
follow_imports = "skip"
ignore_missing_imports = true